# NES-emulator

./: .gitignore  6502.c  6502.h  CMakeLists.txt  README.md  card_load.c  color_def.h  controller.c  controller.h  interface.c  interface.h  main.c  mapper.h  mapper0.c  mapper0.h  mapper2.c  mapper2.h  mapper3.c  mapper3.h  nes.c  ppu.c  ppu.h
